syntax = "proto3";
option go_package = "pkg/file";

// FileService represents the service for file operations.
service FileService {
  // UploadFile is used to upload a file.
  rpc UploadFile(stream AddRequest) returns (AddResponse);
  // GetFile is used to retrieve a file.
  rpc GetFile(GetRequest) returns (stream GetContent);
  // GetAllFiles is used to retrieve all file names for a user.
  rpc GetAllFiles(GetRequest) returns (AllFilesResponse);
}

// Represents the request message for uploading a file.
message AddRequest {
  string user_id = 1;
  string file_name = 2;
  string file_type = 3;
  int64 file_size = 4;
  bytes file_content = 5;
}

// Represents the response message for uploading a file.
message AddResponse {
  string file_name = 1;
}

message GetContent {
  bytes file_content = 1;
}

// Represents the request message for retrieving a file.
message GetRequest {
  string user_id = 1;
  string file_name = 2;
}

// Represents the response message for retrieving a file.
message GetResponse {
  string file_name = 1;
  string file_type = 2;
  uint64 file_size_bytes = 3;
  string creating_time = 4;
}

// Represents the response message for retrieving all files.
message AllFilesResponse {
  repeated GetResponse files = 1;
}
